# Gateway_Windows

MIMXRT1051xxxxB_Project/: .cproject  .project
MIMXRT1051xxxxB_Project/Debug/: EnsoAgent_Debug.ld  EnsoAgent_Debug_library.ld  EnsoAgent_Debug_memory.ld  EnsoAgent_Windows.map  EnsoAgent_Windows_Debug.ld  EnsoAgent_Windows_Debug_library.ld  EnsoAgent_Windows_Debug_memory.ld  EnsoAgent_aws_shadow_wiced_Debug.ld  EnsoAgent_aws_shadow_wiced_Debug_library.ld  EnsoAgent_aws_shadow_wiced_Debug_memory.ld  MIMXRT1051xxxxB_Project.axf  MIMXRT1051xxxxB_Project.map  MIMXRT1051xxxxB_Project_Debug.ld  MIMXRT1051xxxxB_Project_Debug_library.ld  MIMXRT1051xxxxB_Project_Debug_memory.ld  makefile  sources.mk
MIMXRT1051xxxxB_Project/Debug/amazon-freertos/freertos_kernel/: event_groups.d  event_groups.su  list.d  list.su  queue.d  queue.su  stream_buffer.d  stream_buffer.su  subdir.mk  tasks.d  tasks.su  timers.d  timers.su
MIMXRT1051xxxxB_Project/Debug/board/: board.d  board.su  clock_config.d  clock_config.su  fsl_phy.d  fsl_phy.su  pin_mux.d  pin_mux.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/component/lists/: generic_list.d  generic_list.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/component/serial_manager/: serial_manager.d  serial_manager.su  serial_port_uart.d  serial_port_uart.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/component/uart/: lpuart_adapter.d  lpuart_adapter.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/device/: subdir.mk  system_MIMXRT1051.d  system_MIMXRT1051.su  system_MIMXRT1052.su
MIMXRT1051xxxxB_Project/Debug/drivers/: fsl_adc.d  fsl_adc.su  fsl_adc_etc.d  fsl_adc_etc.su  fsl_cache.su  fsl_clock.d  fsl_clock.su  fsl_cmp.su  fsl_common.d  fsl_common.su  fsl_dcdc.d  fsl_dcdc.su  fsl_dcp.d  fsl_dcp.su  fsl_edma.su  fsl_enet.d  fsl_enet.su  fsl_flexio.d  fsl_flexio.su  fsl_flexio_uart.d  fsl_flexio_uart.su  fsl_flexspi.d  fsl_flexspi.su  fsl_gpc.d  fsl_gpc.su  fsl_gpio.d  fsl_gpio.su  fsl_gpt.d  fsl_gpt.su  fsl_lpspi.d  fsl_lpspi.su  fsl_lpspi_edma.su  fsl_lpuart.d  fsl_lpuart.su  fsl_rtwdog.d  fsl_rtwdog.su  fsl_trng.d  fsl_trng.su  fsl_tsc.d  fsl_tsc.su  (+2 more)
MIMXRT1051xxxxB_Project/Debug/drivers/freertos/: fsl_lpuart_freertos.d  fsl_lpuart_freertos.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/lwip/port/: enet_ethernetif.su  enet_ethernetif_kinetis.su  subdir.mk  sys_arch.d  sys_arch.su
MIMXRT1051xxxxB_Project/Debug/sdmmc/port/: fsl_sdmmc_event.d  fsl_sdmmc_event.su  fsl_sdmmc_host.d  fsl_sdmmc_host.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/sdmmc/src/: fsl_sdio.d  fsl_sdio.su  fsl_sdmmc_common.d  fsl_sdmmc_common.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/source/: MIMXRT1051xxxxB_Project.d  MIMXRT1051xxxxB_Project.su  OSAL_Debug.d  OSAL_Debug.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/source/CloudComms/: CLD_CommsInterface.d  CLD_CommsInterface.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/source/EnsoComms/: ECOM_FunctionBasedApi.d  ECOM_FunctionBasedApi.su  ECOM_MessageBasedApi.d  ECOM_MessageBasedApi.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/source/Logger/: LOG_Api.d  LOG_Api.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/source/OSAL/: OSAL_Debug.d  OSAL_Debug.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/source/RT1050/: subdir.mk
MIMXRT1051xxxxB_Project/Debug/source/Storage/: STO_Dummy.d  STO_Dummy.su  STO_Handler.d  STO_Handler.su  STO_Manager.d  STO_Manager.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/source/Watchdog/: Watchdog.d  Watchdog.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/startup/: startup_mimxrt1051.d  startup_mimxrt1051.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/utilities/: fsl_assert.d  fsl_debug_console.d  fsl_debug_console.su  fsl_str.d  fsl_str.su  subdir.mk
MIMXRT1051xxxxB_Project/Debug/xip/: evkbimxrt1050_flexspi_nor_config.d  fsl_flexspi_nor_boot.d  subdir.mk
MIMXRT1051xxxxB_Project/board/: board.c  clock_config.c  pin_mux.c
MIMXRT1051xxxxB_Project/lwip/src/api/: sockets.c
MIMXRT1051xxxxB_Project/mbedtls/include/mbedtls/: aes.h  ctr_drbg.h
MIMXRT1051xxxxB_Project/source/: FreeRTOSConfig.h  MIMXRT1051xxxxB_Project.c  OSAL_Api.h  OSAL_Debug.c  OSAL_Types.h  aws_mbedtls_config.h  lwipopts.h
MIMXRT1051xxxxB_Project/source/Applications/EnsoAgentLED/armgcc/: CMakeLists.txt  build.project.env  link_copydown.ld  link_ramdebug.ld  make.sh
MIMXRT1051xxxxB_Project/source/CloudComms/: CLD_CommsInterface.c  CLD_CommsInterface.h
MIMXRT1051xxxxB_Project/source/EnsoComms/: ECOM_Api.h  ECOM_FunctionBasedApi.c  ECOM_MessageBasedApi.c  ECOM_Messages.h
MIMXRT1051xxxxB_Project/source/HAL/: HAL.h
MIMXRT1051xxxxB_Project/source/KeyStore/: KEY_Api.h
MIMXRT1051xxxxB_Project/source/Logger/: LOG_Api.c  LOG_Api.h
MIMXRT1051xxxxB_Project/source/OSAL/: OSAL_Debug.h
MIMXRT1051xxxxB_Project/source/Storage/: STO_Dummy.c  STO_Handler.c  STO_Handler.h  STO_Manager.c  STO_Manager.h
MIMXRT1051xxxxB_Project/source/Watchdog/: Watchdog.c  Watchdog.h
WF200_RefProject/.mcuxpressoide_packages_support/: crt_directory.xml  info.properties
WF200_RefProject/.mcuxpressoide_packages_support/MIMXRT1052xxxxB_support/: info.properties
WF200_RefProject/.mcuxpressoide_packages_support/MIMXRT1062xxxxA_support/: info.properties
WF200_RefProject/.metadata/: version.ini
WF200_RefProject/WF200_RefProjectToPort/: .cproject  .project  WF200_RefProjectToPort LinkServer Debug.launch  WF200_RefProjectToPort.mex
WF200_RefProject/WF200_RefProjectToPort/Debug/: MIMXRT1052xxxxB_part.xml  WF200_RefProjectToPort.axf  WF200_RefProjectToPort.map  evkbimxrt1050_lwip_httpscli_mbedTLS_freertos_Debug.ld  evkbimxrt1050_lwip_httpscli_mbedTLS_freertos_Debug_library.ld  evkbimxrt1050_lwip_httpscli_mbedTLS_freertos_Debug_memory.ld  makefile  sources.mk
WF200_RefProject/WF200_RefProjectToPort/WF200/: WF200_ap_mode_task.c  WF200_comms_task.c  WF200_host_api.c  WF200_host_common.h  WF200_host_spi.c  WF200_netif.c  WF200_setup.c  WF200_testing_task.c  dhcp_server.c  dhcp_server.h  sl_wfx_host.h
WF200_RefProject/WF200_RefProjectToPort/board/: pin_mux.c
WF200_RefProject/WF200_RefProjectToPort/source/: lwipopts.h  main.c
(+916 files in other folders)
